syntax = "proto3";

package memory;

// Memory Service for Vector Database operations
service MemoryService {
  // Query memory using semantic search
  rpc QueryMemory (QueryMemoryRequest) returns (QueryMemoryResponse);
  
  // Commit/store a new memory block
  rpc CommitMemory (CommitMemoryRequest) returns (CommitMemoryResponse);
  
  // List all memories with pagination
  rpc ListMemories (ListMemoriesRequest) returns (ListMemoriesResponse);
  
  // Delete a memory by ID
  rpc DeleteMemory (DeleteMemoryRequest) returns (DeleteMemoryResponse);
  
  // Health check endpoint
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

// Request to query memory
message QueryMemoryRequest {
  string query = 1;           // Semantic search query text
  string namespace = 2;       // Memory namespace (e.g., "threat_intel_v24")
  string twin_id = 3;         // Optional: Filter by twin ID
  int32 top_k = 4;            // Number of results to return (default: 10)
  repeated string memory_types = 5; // Optional: Filter by memory types
}

// Memory result from query
message MemoryResult {
  string id = 1;              // UUID of the memory block
  string timestamp = 2;       // ISO 8601 timestamp
  string content = 3;         // Memory content text
  string agent_id = 4;        // ID of the agent that created this memory
  string risk_level = 5;       // Risk level: "Low", "Medium", "High", "Critical"
  double similarity = 6;       // Similarity score (0.0 to 1.0)
  string memory_type = 7;     // Type: "Episodic", "Semantic", "RAGSource", "Reflection"
  map<string, string> metadata = 8; // Additional metadata
}

// Response to query request
message QueryMemoryResponse {
  repeated MemoryResult results = 1;
  int32 total_count = 2;      // Total number of results found
  string namespace = 3;       // Namespace that was queried
}

// Request to commit/store memory
message CommitMemoryRequest {
  string content = 1;         // Memory content to store
  string namespace = 2;       // Memory namespace
  string twin_id = 3;         // ID of the twin creating this memory
  string memory_type = 4;     // Type: "Episodic", "Semantic", "RAGSource", "Reflection"
  string risk_level = 5;      // Optional risk level
  map<string, string> metadata = 6; // Additional metadata
}

// Response to commit request
message CommitMemoryResponse {
  string memory_id = 1;       // UUID of the created memory block
  bool success = 2;           // Whether the commit was successful
  string error_message = 3;    // Error message if commit failed
}

// Request to list memories with pagination
message ListMemoriesRequest {
  string namespace = 1;        // Memory namespace (optional: empty string for all namespaces)
  int32 page = 2;             // Page number (1-indexed, default: 1)
  int32 page_size = 3;       // Number of results per page (default: 50, max: 1000)
  string twin_id = 4;        // Optional: Filter by twin ID
}

// Response to list memories request
message ListMemoriesResponse {
  repeated MemoryResult memories = 1;
  int32 total_count = 2;      // Total number of memories matching the filter
  int32 page = 3;             // Current page number
  int32 page_size = 4;        // Page size used
  int32 total_pages = 5;       // Total number of pages
  string namespace = 6;        // Namespace that was queried (empty if all)
}

// Request to delete a memory
message DeleteMemoryRequest {
  string memory_id = 1;       // UUID of the memory block to delete
  string namespace = 2;       // Memory namespace (required for Qdrant)
}

// Response to delete memory request
message DeleteMemoryResponse {
  bool success = 1;           // Whether the deletion was successful
  string error_message = 2;   // Error message if deletion failed
}

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  string status = 1;          // "healthy", "degraded", "unhealthy"
  string version = 2;         // Service version
  string message = 3;         // Optional status message
}
